# room-booking-api-minimal

./: .env  Cargo.toml  README.md  diesel.toml  rooms.db
migrations/: up.sql
migrations/2025-05-25-121939_create_tables/: down.sql  up.sql
migrations/2025-05-26-044322_add_admin_table/: down.sql  up.sql
migrations/2025-05-26-074455_drop_role_from_users/: down.sql  up.sql
migrations/2025-05-26-105511_edit_room_table/: down.sql  up.sql
migrations/2025-05-27-075612_add_created_column/: up.sql
migrations/2025-05-28-043439_edit_column_password/: down.sql  up.sql
migrations/2025-05-30-082917_create_table_bookings/: down.sql  up.sql
migrations/2025-06-03-100826_update_user_and_admin_column/: down.sql
src/: app_state.rs  lib.rs  main.rs
src/application/: admin_service.rs  booking_service.rs  login_service.rs  mod.rs  room_service.rs  user_service.rs
src/domain/: admin.rs  auth.rs  booking.rs  booking_status.rs  mod.rs  room.rs  user.rs
src/infrastructure/: admin_repository.rs  booking_repository.rs  database.rs  jwt.rs  migration.txt  mod.rs  room_repository.rs  schema.rs  user_repository.rs
src/middleware/: auth.rs
src/presentation/: admin_handler.rs  admin_user_handler.rs  booking_handler.rs  handler.rs  mod.rs  room_handler.rs  test_handler.rs  user_handler.rs
