[package]
name = "room-booking-api-minimal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
axum-extra = { version = "0.9", features = ["cookie"] } #
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0"
jsonwebtoken = { version = "9", default-features = false }
tower-http = { version = "0.5", features = ["auth","cors"] }
async-trait = "0.1.83"
r2d2 = "0.8.10"
bcrypt = "0.17.0"
tower = "0.4"
http-body = "1.0" #
bytes = "1"  

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

[dev-dependencies]
diesel_cli = { version = "2.2", features = ["sqlite"], default-features = false }